# AITEAM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  aiteam_bootstrap.py  cli.py  memory.md  package-lock.json  pyproject.toml
.cursor/plans/: security_and_tech_debt_audit_1437e99e.plan.md
.github/workflows/: ci.yml
agent_audit_standalone/: __init__.py  __main__.py  cli.py  indexer.py
agents/: __init__.py  _api_client.py  _knowledge_manager.py  ambassador.py  base_agent.py  chat_agent.py  compact_worker.py  expert.py  explainer.py  leader.py  llm_usage.py  secretary.py  tool_curator.py  worker.py
agents/support/: __init__.py  _ambassador_classify.py  _api_client.py  _api_transport.py  _budget_manager.py  _leader_format.py  _stream_aggregator.py  _usage_logging.py
agents/teamMap/: _team_map.py
agents/team_map/: __init__.py  _team_map.py
aiteamruntime/: __init__.py  agents.py  artifacts.py  bus.py  contracts.py  demo.py  demo_cli.py  events.py  governor.py  lock_manager.py  overseer.py  pipeline.py  references.py  runtime.py  scheduler.py  secretary_proc.py  traces.py
aiteamruntime/core/: __init__.py  bus.py  context.py  contracts.py  events.py  governor.py  overseer.py  references.py  runtime.py  scheduler.py  state.py
core/: __init__.py  bootstrap.py  paths.py  pipeline_state.py  routing_map.py  runtime_config.py
docs/: REPO_LAYOUT.md  security.md  workflow_overhaul_prompt.md
scripts/: README.md  run_aiteam.py  update_memory.py
skillsAdmin/: README.md
tests/: conftest.py  test_activity_badges.py  test_activity_log.py  test_agent_runtime.py  test_aiteamruntime_lifecycle.py  test_ambassador_methods.py  test_ambassador_tier_classification.py  test_api_client_stream.py  test_api_client_unit.py  test_ask_chat_manager.py  test_ask_chat_store.py  test_ask_history.py  test_base_agent_extra.py  test_budget_guard.py  test_budget_manager.py  test_cli_security_helpers.py  test_cli_state.py  test_cli_state_overrides.py  test_config_hardware.py  test_config_pricing.py  test_config_registry.py  test_config_service.py  test_config_settings.py  test_dashboard_batches_browser.py  test_dashboard_helpers.py  test_dashboard_history_browser.py  test_dashboard_history_pure.py  test_dashboard_pdf.py  test_dashboard_pdf_font_fallback.py  test_dashboard_range_picker.py  test_dashboard_range_state.py  test_dashboard_render.py  test_dashboard_tui_utils.py  test_dashboard_turn_views.py  test_delta_brief.py  test_domain_prompts.py  test_embedding_client.py  test_env_guard.py  test_expert_agent.py  test_expert_coplan.py  (+61 more)
tools/: README.md
utils/: __init__.py  activity_badges.py  ask_history.py  budget_guard.py  delta_brief.py  env_guard.py  file_manager.py  free_model_finder.py  graphrag_utils.py  input_validator.py  json_utils.py  logger.py  tracker.py  tracker_aggregate.py  tracker_batches.py  tracker_budget.py  tracker_cache.py  tracker_openrouter.py  tracker_usage.py
(+463 files in other folders)
