[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiteam"
version = "6.2.1"
description = "AI Team Blueprint - Multi-Agent System CLI"
authors = [
    {name = "Nguyễn Đặng Tường Minh"}
]
requires-python = ">=3.10"
dependencies = [
    "rich",
    "openai",
    "python-dotenv",
    "pydantic",
    "click",
    "prompt_toolkit",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "textual",
    "cryptography>=42.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
    "fonttools>=4.60.2",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7",
    "bandit[toml]>=1.7",
    "mypy>=1.8",
]

[project.scripts]
aiteam = "core.frontends.cli.app:main_loop"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agents*", "utils*"]
exclude = ["tests*", "build*", "dist*", "*.egg-info*"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=core --cov=agents --cov=utils --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "core/cli/python_cli/workflow/tui/*",
    "core/cli/python_cli/shell/monitor_queue_drain.py",
    "core/cli/python_cli/shell/choice_lists.py",
    "scripts/*",
]

[tool.coverage.report]
omit = [
    "core/cli/python_cli/workflow/tui/*",
    "core/cli/python_cli/shell/monitor_queue_drain.py",
    "core/cli/python_cli/shell/choice_lists.py",
    "scripts/*",
]

[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert statements used in non-test helpers (intentional guard clauses)
# B310: urllib.request.urlopen called only on the fixed host openrouter.ai
#       (see core/config/pricing.py — URL is hardcoded, not user-supplied)
skips = ["B101", "B310"]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
ignore_missing_imports = true
